--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,6 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>3.6.7.Final</version>
-      <exclusions>
-        <exclusion>
-          <groupId>dom4j</groupId>
-          <artifactId>dom4j</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>javax.persistence</groupId>
@@ -34,6 +28,11 @@
       <artifactId>servlet-api</artifactId>
       <version>6.0.35</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.12.1.GA</version>
     </dependency>            
   </dependencies>
   <build>
