--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cloudbees.templates</groupId>
-  <artifactId>maven-cloudbees-template</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>maven-hibernate-template</artifactId>
+  <version>1.0</version>
   <packaging>war</packaging>
-  <name>A Simple Java EE Webapp for CloudBees</name>
+  <name>A Simple Hibernate Webapp for Tomcat on CloudBees</name>
   <inceptionYear>2012</inceptionYear>
 
   <dependencies>
@@ -24,16 +24,18 @@
       <version>1.0.2</version>
     </dependency>
     <dependency>
+      <groupId>javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.12.1.GA</version>
+    </dependency>    
+    <!-- Currently CloudBees uses tomcat 6.0.35 and we need the Servlet classes to compile with 
+    but they are provided during deployment, so we set the scope to provided. -->
+    <dependency>
       <groupId>org.apache.tomcat</groupId>
       <artifactId>servlet-api</artifactId>
       <version>6.0.35</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>javassist</groupId>
-      <artifactId>javassist</artifactId>
-      <version>3.12.1.GA</version>
-    </dependency>            
+    </dependency>        
   </dependencies>
   <build>
     <finalName>maven_template</finalName>
