--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
    <resource-ref>
-    <res-ref-name>comp/env/jdbc/ExampleDS</res-ref-name>
+    <res-ref-name>comp/env/jdbc/HibernateDB</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
