--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,8 @@
   </servlet-mapping>
    <resource-ref>
     <res-ref-name>comp/env/jdbc/HibernateDB</res-ref-name>
+    <!-- Comment the above line, and uncomment the following one to deploy on JBoss -->
+    <!-- <res-ref-name>jdbc/HibernateDB</res-ref-name> -->
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
