--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>maven-hibernate-template</artifactId>
   <version>1.0</version>
   <packaging>war</packaging>
-  <name>A Simple Hibernate Webapp for Tomcat on CloudBees</name>
+  <name>A Simple Hibernate Webapp for CloudBees</name>
   <inceptionYear>2012</inceptionYear>
 
   <dependencies>
@@ -40,9 +40,28 @@
       <scope>provided</scope>
     </dependency>        
   </dependencies>
+
+  <pluginRepositories>
+   <pluginRepository>
+     <id>cloudbees-public-release</id>
+     <url>http://repository-cloudbees.forge.cloudbees.com/public-release</url>
+     <releases>
+       <enabled>true</enabled>
+     </releases> 
+     <snapshots>
+       <enabled>false</enabled>
+     </snapshots>
+    </pluginRepository>
+ </pluginRepositories>
+
   <build>
     <finalName>maven_template</finalName>
     <plugins>
+     <plugin>
+       <groupId>com.cloudbees</groupId>
+       <artifactId>bees-maven-plugin</artifactId>
+       <version>1.3.2</version>
+     </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
