--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,9 +11,7 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
    <resource-ref>
-    <res-ref-name>comp/env/jdbc/ExampleDS</res-ref-name>
-    <!-- Comment the above line, and uncomment the following one to deploy on JBoss -->
-    <!-- <res-ref-name>jdbc/ExampleDS</res-ref-name> -->
+    <res-ref-name>jdbc/ExampleDS</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
