--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
 
   
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.cloudbees.templates</groupId>
-  <artifactId>maven-hibernate-template</artifactId>
-  <version>1.0</version>
+  <groupId>localdomain.localhost</groupId>
+  <artifactId>tomcat-hibernate-clickstart</artifactId>
+  <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>A Simple Hibernate Webapp for CloudBees</name>
   <inceptionYear>2012</inceptionYear>
@@ -61,7 +61,7 @@
  </pluginRepositories>
 
   <build>
-    <finalName>maven_template</finalName>
+    <finalName>tomcat-hibernate-clickstart</finalName>
     <plugins>
      <plugin>
        <groupId>com.cloudbees</groupId>
